The html update required for the observation table to work

--- a/automator/main.html
+++ b/automator/main.html
@@ -14,6 +14,34 @@
     .hidden {
       display: none;
     }
+
+    /* Make the table bigger */
+    table {
+      width: 100%;
+      margin: 20px 0;
+      border-collapse: collapse; /* Ensures the borders are combined properly */
+    }
+
+    /* Define borders for table, header cells, and data cells */
+    th, td {
+      border: 2px solid black; /* Thicker borders for visibility */
+      padding: 15px;           /* Increase padding to make cells bigger */
+      text-align: left;        /* Align text to the left */
+      font-size: 18px;         /* Increase the font size for better readability */
+    }
+
+    /* Style for the splitting line */
+    .splitting-line {
+      background-color: #000;  /* Make it black */
+      height: 10px;            /* Increase its height */
+    }
+
+    /* Make the splitting line span across all columns */
+    .splitting-line td {
+      padding: 0;
+      border: none;
+      height: 10px;
+    }
   </style>
 </head>
 <body>
@@ -43,6 +71,17 @@
 
   </div>
 
+  <h1>Dynamically Generated Observation Table</h1>
+
+  <table id="dataTable">
+    <thead>
+      <!-- Dynamic headers will be added here -->
+    </thead>
+    <tbody>
+      <!-- Dynamic rows will be added here -->
+    </tbody>
+  </table>
+  
   <!-- Graphviz via viz.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/full.render.js"></script>
