The table is now generated more often!

--- a/automator/main.html
+++ b/automator/main.html
@@ -71,17 +71,18 @@
 
   </div>
 
-  <h1>Dynamically Generated Observation Table</h1>
+  <div id="observation-table-container" class="hidden">
+    <h1>Dynamically Generated Observation Table</h1>
 
-  <table id="dataTable">
-    <thead>
-      <!-- Dynamic headers will be added here -->
-    </thead>
-    <tbody>
-      <!-- Dynamic rows will be added here -->
-    </tbody>
-  </table>
-  
+    <table id="dataTable">
+      <thead>
+	<!-- Dynamic headers will be added here -->
+      </thead>
+      <tbody>
+	<!-- Dynamic rows will be added here -->
+      </tbody>
+    </table>
+  </div>
   <!-- Graphviz via viz.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/full.render.js"></script>
