--- a/automator/main.html
+++ b/automator/main.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Automaton Interaction</title>
+  <title>Automator</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <h1>Alphabet & Automaton</h1>
+  <h1>Automator</h1>
   
   <div id="alphabet-input">
     <h2>Provide an Alphabet</h2>
