Printing the first words recognized by the automaton proposed

--- a/automator/main.html
+++ b/automator/main.html
@@ -26,6 +26,8 @@
   <div id="automaton" class="hidden">
     <h2>Automaton Representation</h2>
     <div id="graph"></div>
+    <p>Here are the first words this automaton recognizes:</p>
+    <div id="first_words"></div>
     <p>Is your language represented by this automaton? If it is not, give me an example of a word I am missjudging.</p>
     <p>(either a word in your language I don't recognize, or a word I recognize that is not part of your langage)</p>
     <input type="text" id="counterexample" placeholder="">
