--- a/automator/main.html
+++ b/automator/main.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <h1>Automator</h1>
 
 	<svg class="face" viewBox="0 -10 70 70" >
@@ -73,7 +74,8 @@
   <!-- Graphviz via viz.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/full.render.js"></script>
-  
+
+  <script src="https://unpkg.com/gsap@3.6.1/dist/MotionPathPlugin.min.js"></script>
   <script src="automator.js"></script>
 </body>
 </html>
