--- a/automator/main.html
+++ b/automator/main.html
@@ -9,7 +9,7 @@
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <h1>Automator</h1>
-
+	<div class="wowo-animation"></div>
 	<svg class="face" viewBox="0 -10 55 70" >
 <path id="path" d="M 20 20 q 100 50 200 20 q 50 -5 100 0 20 30 20 0 L 20 20" fill="white"></path>
 <g class="person">
